2014-06-10  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (yylex_destroy): The FLEX_ version are prefixed with YY_
	in old flexes too.

2014-06-09  Kaz Kylheku  <kaz@kylheku.com>

	New variable stdlib, with a sysroot mechanism to compute
	the path based on the "sysroot" where it is actually installed.

	* txr.c (progname_8u, progpath): New static variables.
	(get_self_path, sysroot_helper, sysroot, sysroot_init): New
	static functions. Sysroot creates a stdlib variable.
	(main): Initialize progname_u8 value, and call sysroot_init.

2014-06-09  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (match_str): Extended to suffix testing, with a negative
	start argument.

	* txr.1: Documented.

2014-06-09  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile: fix broken tests; numerous test cases output
	bindings, and need the -B option. One test case does not
	need the -l option which now implies -B.

2014-06-09  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (txr_main): New option --args.
	Also, put in missing check for -f being erroneously clumped.

	* txr.1: Documented.

2014-06-09  Kaz Kylheku  <kaz@kylheku.com>

	The dumping of bindings and printing of false must now
	be explicitly requested by the -B option.

	* match.c (opt_nobindings): Variable removed.
	(opt_print_bindings): New variable.
	(extract): Print bindings or "false" if opt_print_bindings is true.

	* stream.c (output_produced): Variable removed.
	(stdio_put_string, stdio_put_char, stdio_put_byte): Remove
	update of output_produced.

	* stream.h (output_produced): Declaration removed.

	* txr.1: Documentation updated.

	* txr.c (txr_main): Option 'b' does nothing. 'B', 'l', 'a',
	and '--lisp-bindings' set opt_print_bindings to 1.

	* txr.h (opt_nobindings): Declaration removed.
	(opt_print_bindings): Declared.

	* unwind.c (uw_throw): When exiting due to a query error or
	file error, print false when opt_print_bindings is true.

2014-06-06  Kaz Kylheku  <kaz@kylheku.com>
